--- a/content/ressurser.mdx
+++ b/content/ressurser.mdx
@@ -23,9 +23,14 @@ import { ResourceGrid } from '@/components/resource-grid'
       </div>
     }
     links={[
-      { href: 'https://marcus.uib.no', label: 'UM' },
-      { href: 'https://marcus.uib.no', label: 'Faghistorisk' },
       { href: 'https://marcus.uib.no/search', label: 'Søk i Marcus' },
+      { href: 'https://marcus.uib.no/instance/collection/bgm', label: 'Bergens Museum' },
+      { href: 'https://marcus.uib.no/instance/collection/1acd4632-0d30-431f-a5f0-f7576d2b3023', label: 'Faghistorie' },
+      { href: 'https://marcus.uib.no/instance/collection/f893435a-d52c-4273-b8cc-f008a5e13651', label: 'Boksamlinger' },
+      { href: 'https://marcus.uib.no/instance/collection/billedsamlingen', label: 'Historiske fotografi' },
+      { href: 'https://marcus.uib.no/instance/collection/diplomsamlingen', label: 'Diplomer' },
+
+      
     ]}
   />
   <ResourceGrid.Item
