--- a/content/samlingene-og-tilvekst.mdx
+++ b/content/samlingene-og-tilvekst.mdx
@@ -2,12 +2,22 @@
 title: Samlingene og tilvekst
 description: Samlingene og tilvekst
 keywords: 
-  - samlingene
+  - samlinger
   - tilvekst
+  - bibliotek
+  - museum
 ---
 
 <ContentGrid>
 
 # Samlingene og tilvekst
+
+I 1833 laget Bergens Museum en detaljert oversikt over samlingene sine, til sammen 8024 gjenstander, bl.a. 212 «Fiske og insekter i spiritus» og 56 manuskripter. Det er  langt frem til tallene på gjenstander, bøker og arkivmateriale i samlingene i dag, nesten 200 år senere. I 2025 er det snakk om millioner og hylle-kilometer med gjenstander og arkivmateriale.
+
+Samlingenes utvikling og tilvekst har i hele perioden siden 1825 styrt museets og bibliotekets endringer i infrastruktur – nye bygg, nye magasiner, og evige spørsmål om plassmangel. Det har vært tilfelle helt siden museets spede begynnelse, først i de små rommene i Realskolen, senere i egne lokaler i det Klagenbergske hus i 1831, med tilstøtende nybygg i 1840. Spranget var på alle vis stort opp til det praktfulle nybygget som sto ferdig på Rakkarhaugen i 1865. Men selv her meldte plassmangelen seg snart.
+
+Problemet lå i selve samlingsforvaltningen og utstillingsmetodikken, alle gjenstander museet eide skulle stilles ut. Da sier det seg selv at med regelmessig tilvekst til samlingene ville kapasiteten sprenges. Det var ikke før under planleggingen av de nye sidefløyene på museet i 1890-årene at tankegangen endret seg, og samlingene ble delt i en publikumsutstilling og studie- eller forskningssamlinger, de siste bevart i magasinene.
+
+Voksesmerter og plassmangel har altså preget denne utviklingen i infrastruktur og samlingsforvaltning, og gjør det til dels også i dag. Men dette er ikke unikt for museet og biblioteket i Bergen, det samme gjelder for alle levende museer, arkiv og bibliotek. For stikkordet her er nettopp levende. Levende samlinger har tilvekst, de er ikke avsluttede. På samme vis som denne digitale portalen skal utvikles og utvides og være en levende påminnelse om den felles kulturarven vi er så heldige å bevare, skal også samlingene våre utvikles og utvides gjennom kontinuerlig tilvekst. Samlingene er grunnlaget for vår virksomhet, uten dem har vi ingenting å forske på eller formidle.
 
 </ContentGrid>
