--- a/content/tema/hverdag/index.mdx
+++ b/content/tema/hverdag/index.mdx
@@ -35,11 +35,11 @@ Kanskje vi også skal tenke på hvordan vår hverdag blir dokumentert for fremti
 
 
 <Cards id="historier" title="Historier om hverdag" className="full pt-10 md:pt-20">
-  <Card title="Christie og de «mærkelige Fiske»" 
-    description="Les om Christie og de «mærkelige Fiske» i museet" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Fisk" 
-    href="/tema/fisk/christie-og-de-maerkelige-fiske" 
+  <Card title="Klesvask»" 
+    description="Alle steder - til alle tider" 
+    image="/nav-card-images/ubb-bs-ok-18198_th.jpg" 
+    imageAlt="Klesvask" 
+    href="https://marcus.uib.no/search/?q=klesvask&filter=type.exact%23Fotografi&filter=subject.exact%23Klesvask&size=20" 
   />
 </Cards>
 
