Add multiple biographical entries for notable figures associated with Bergens Museum, including Anton Mohr Wiesener, Astrid Karlsen, and others, detailing their contributions and roles within the museum. Each entry includes a title, description, keywords, and formatted content for better presentation.

--- a/content/menneskene/olaf-hanssen.mdx
+++ b/content/menneskene/olaf-hanssen.mdx
@@ -5,17 +5,36 @@ keywords:
   - fisk
   - zoologi
   - tegning
+  - geologi
+  - botanikk
+  - feltarbeid
+  - arktiske forskningstokt
+  - nynorskmann
+  - redaktør
+  - vaktmesterstilling
+  - Botanisk museum i Oslo
 ---
 
 <ContentGrid className="mt-10">
-![Fisk tegnet av Stuwitz](/images/fisk/ubb-ms-0311-a-001.jpg)
-*Skjellbrosme, tegnet av Peter Stuwitz. Universitetsbiblioteket i Bergen.*
 
 # Olaf Hanssen
-## Energisk innsamler og autodidakt
 
-kort bio om olaf hanssen
-![Fisk tegnet av Stuwitz](/images/fisk/ubb-ms-0311-a-002.jpg)
-*Ålekvabbe, tegnet av Peter Stuwitz. Universitetsbiblioteket i Bergen.*
+Olaf Hanssen (1883-1949) kan stå som eksempel på de mange innsamlerne og amatørforskerne som var tilknyttet Bergens Museum. Han var fra Hegglandsdalen i Os, og deltok på feltarbeid både i geologi og botanikk, og samlet på egen hånd inn en mengde geologiske og botaniske funn til museet. Han publiserte om botaniske funn fra Svalbard, og deltok på arktiske forskningstokt. Hanssen var i tillegg ivrig nynorskmann, og var redaktør for flere tidsskrift. I 1931 fikk han en vaktmesterstilling ved Botanisk museum i Oslo, der han samarbeidet med professor Jens Holmboe. 
+
+<Figure image="/images/fisk/ubb-ms-0311-a-001.jpg" alt="Skjellbrosme" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Skjellbrosme, tegnet av Peter Stuwitz. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
+
+<Figure image="/images/fisk/ubb-ms-0311-a-002.jpg" alt="Ålekvabbe" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Ålekvabbe, tegnet av Peter Stuwitz. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 </ContentGrid>
