Remove top rounded cards

--- a/content/menneskene/index.mdx
+++ b/content/menneskene/index.mdx
@@ -19,6 +19,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/Christie_grunnleggerBy1871.jpg" 
     imageAlt="Portrett av Christie" 
     href="/menneskene/wfk-christie"
+    rounded={false}
   />
    <Card 
     title="Jacob Neumann (1772-1848)"
@@ -26,6 +27,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/By7851_Neumann_red.jpg" 
     imageAlt="Portrett av Neumann" 
     href="https://nbl.snl.no/Jacob_Neumann"
+    rounded={false}
   />
    <Card 
     title="August Konow (1780-1873)"
@@ -33,6 +35,7 @@ import {Cards, Card} from '@/components/card'
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="Portrett av August Konow" 
     href="https://nbl.snl.no/August_Konow"
+    rounded={false}
   />
   <Card
     title="Andres Lorange (1847-1888)"
@@ -40,6 +43,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/AndersLorange_red.jpg" 
     imageAlt="Portrett av Andres Lorange" 
     href="https://www.unimus.no/arkeologi/lorange/#0"
+    rounded={false}
   />
   <Card
     title="Olaf Hanssen"
@@ -47,6 +51,7 @@ import {Cards, Card} from '@/components/card'
     image="/nav-card-images/bt-23-10-1933-olaf-hanssen-icon.jpg" 
     imageAlt="Portrett av Olaf Hanssen" 
     href="/menneskene/olaf-hanssen"
+    rounded={false}
   />
   <Card 
     title="Magdalene Abel (1869-)"
@@ -54,6 +59,7 @@ import {Cards, Card} from '@/components/card'
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="Portrett av Magdalene Abel" 
     href="/"
+    rounded={false}
   />
   <Card 
     title="Haakon Shetelig (1877-1955)"
@@ -61,6 +67,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/HaakonShetelig_red.jpg" 
     imageAlt="Portrett av Haakon Shetelig" 
     href="https://snl.no/Haakon_Shetelig"
+    rounded={false}
   />
   <Card 
     title="Johannes Bøe (1891-1971)"
@@ -68,6 +75,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/Johs_Bøe_red.jpg" 
     imageAlt="Portrett av Johs. Bøe" 
     href="https://snl.no/Johannes_B%C3%B8e"
+    rounded={false}
   />
   <Card 
     title="Eva Fett"
@@ -75,6 +83,7 @@ import {Cards, Card} from '@/components/card'
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="Portrett av Eva Fett" 
     href="https://marcus.uib.no"
+    rounded={false}
   />
   <Card 
     title="Per Fett"
@@ -82,6 +91,7 @@ import {Cards, Card} from '@/components/card'
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="Portrett av Per Fett" 
     href="https://marcus.uib.no"
+    rounded={false}
   />
   <Card
     title="Anton Mohr Wiesener (1879-1947)"
@@ -89,6 +99,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-bs-fol-00644-001c_xl-wiesener.jpg" 
     imageAlt="Portrett av Anton Mohr Wiesener" 
     href="/menneskene/anton-mohr-wiesener"
+    rounded={false}
   />
   <Card
     title="Astrid Karlsen (1889-1973)"
@@ -96,6 +107,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-bgm-bok-1925-astrid-karlsen.jpg" 
     imageAlt="Portrett av Astrid Karlsen" 
     href="/menneskene/astrid-karlsen"
+    rounded={false}
   />
   <Card
     title="Astrid Monsen (1886-1960)"
@@ -103,6 +115,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-ms-2093-l-1-072-062-astrid-monsen.jpg" 
     imageAlt="Portrett av Astrid Monsen" 
     href="/menneskene/astrid-monsen"
+    rounded={false}
   />
   <Card
     title="August Brinkmann (1878-1940)"
@@ -110,6 +123,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-bs-fol-01039-013-b_xl-august-brinkmann.jpg" 
     imageAlt="Portrett av August Brinkmann" 
     href="/menneskene/august-brinkmann"
+    rounded={false}
   />
   <Card
     title="Bjørn Trumpy (1900-1974)"
@@ -117,6 +131,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-nor-u-0053_xl-bjoern-trumpy.jpg" 
     imageAlt="Portrett av Bjørn Trumpy" 
     href="/menneskene/bjoern-trumpy"
+    rounded={false}
   />
   <Card
     title="Bjørn Helland-Hansen (1877-1957)"
@@ -124,6 +139,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-bs-fol-01263-007-c_xl-helland-hansen.jpg" 
     imageAlt="Portrett av Bjørn Helland-Hansen" 
     href="/menneskene/bjoern-helland-hansen"
+    rounded={false}
   />
   <Card
     title="Carl Fredrik Kolderup (1868-1942)"
@@ -131,6 +147,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-jr-234-007_xl-carl-fredrik-kolderup.jpg" 
     imageAlt="Portrett av Carl Fredrik Kolderup" 
     href="/menneskene/carl-fredrik-kolderup"
+    rounded={false}
   />
   <Card
     title="Daniel Cornelius Danielssen (1815-1894)"
@@ -138,6 +155,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-bs-fol-02335_xl-danielssen.jpg" 
     imageAlt="Portrett av Daniel Cornelius Danielssen" 
     href="/menneskene/daniel-cornelius-danielssen"
+    rounded={false}
   />
   <Card
     title="Ellen Brunchorst (1861-1948)"
@@ -145,6 +163,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-bs-ok-03493_xl-ellen-brunchorst.jpg" 
     imageAlt="Portrett av Ellen Brunchorst" 
     href="/menneskene/ellen-brunchorst"
+    rounded={false}
   />
   <Card
     title="Fridtjof Nansen (1861-1930)"
@@ -152,6 +171,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-bs-fol-00410_xl-nansen.jpg" 
     imageAlt="Portrett av Fridtjof Nansen" 
     href="/menneskene/fridtjof-nansen"
+    rounded={false}
   />
   <Card
     title="Gerhard Armauer Hansen (1841-1912)"
@@ -159,6 +179,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-xxvi-011-056-d_xl-armauer-hansen.jpg" 
     imageAlt="Portrett av Gerhard Armauer Hansen" 
     href="/menneskene/gerhard-armauer-hansen"
+    rounded={false}
   />
   <Card
     title="Henrich Bucher jr. (1854-1932)"
@@ -166,6 +187,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-bs-fol-00644-001a_xl-bucher.jpg" 
     imageAlt="Portrett av Henrich Bucher jr." 
     href="/menneskene/henrich-bucher-jr"
+    rounded={false}
   />
   <Card
     title="Herman Friele (1838-1921)"
@@ -173,6 +195,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-bs-ok-00300_xl-friele.jpg" 
     imageAlt="Portrett av Herman Friele" 
     href="/menneskene/herman-friele"
+    rounded={false}
   />
   <Card
     title="James Alexanderssøn Grieg (1861-1936)"
@@ -180,6 +203,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-bs-fol-01796_xl-james-grieg.jpg" 
     imageAlt="Portrett av James Alexanderssøn Grieg" 
     href="https://snl.no/James_Alexanderssøn_Grieg"
+    rounded={false}
   />
   <Card
     title="Jack Bjerknes (1897-1975)"
@@ -187,6 +211,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-bs-ok-05795-001_xl-jack-bjerknes.jpg" 
     imageAlt="Portrett av Jack Bjerknes" 
     href="/menneskene/jack-bjerknes"
+    rounded={false}
   />
   <Card
     title="Jens Holmboe (1880-1943)"
@@ -194,6 +219,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-jr-236-011_xl-jens-holmboe.jpg" 
     imageAlt="Portrett av Jens Holmboe" 
     href="/menneskene/jens-holmboe"
+    rounded={false}
   />
   <Card
     title="Johan Koren (1809-1885)"
@@ -201,6 +227,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-bgm-bok-1900-johan-koren.jpg" 
     imageAlt="Portrett av Johan Koren" 
     href="/menneskene/johan-koren"
+    rounded={false}
   />
   <Card
     title="Jørgen Brunchorst (1862-1917)"
@@ -208,6 +235,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-bs-ok-01442_xl-joergen-brunchorst.jpg" 
     imageAlt="Portrett av Jørgen Brunchorst" 
     href="/menneskene/joergen-brunchorst"
+    rounded={false}
   />
   <Card
     title="Miranda Bødtker (1896-1996)"
@@ -215,6 +243,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-ms 2093-T-02-15-04-07-miranda-boedtker.jpg" 
     imageAlt="Portrett av Miranda Bødtker" 
     href="/tema/vekster/miranda-boedtker"
+    rounded={false}
   />
   <Card
     title="Knut Fægri (1909-2001)"
@@ -222,6 +251,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-ms-2072-e-11-005-knut-faegri.jpg" 
     imageAlt="Portrett av Knut Fægri" 
     href="/tema/vekster/knut-faegri"
+    rounded={false}
   />
   <Card
     title="Michael Sars (1805-1869)"
@@ -229,6 +259,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-bs-ok-01594_xl-michael-sars.jpg" 
     imageAlt="Portrett av Michael Sars" 
     href="/menneskene/michael-sars"
+    rounded={false}
   />
   <Card
     title="Niels-Henrik Kolderup (1898-1971)"
@@ -236,6 +267,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-lkl-2-42-06_xl-niels-henrik-kolderup.jpg" 
     imageAlt="Portrett av Niels-Henrik Kolderup" 
     href="/menneskene/niels-henrik-kolderup"
+    rounded={false}
   />
   <Card
     title="Olaf Jensen (1847-1887)"
@@ -243,6 +275,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-bgm-bok-1900-olaf-jensen.jpg" 
     imageAlt="Portrett av Olaf Jensen" 
     href="/menneskene/olaf-jensen"
+    rounded={false}
   />
   <Card
     title="Olav Espevoll (1887-1977)"
@@ -250,6 +283,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/bt-12-05-2024-olav-espevoll.jpg" 
     imageAlt="Portrett av Olav Espevoll" 
     href="/menneskene/olav-espevoll"
+    rounded={false}
   />
   <Card
     title="Oscar Hagem (1885-1982)"
@@ -257,6 +291,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-ec-008-004f_xl1-oscar-hagem.jpg" 
     imageAlt="Portrett av Oscar Hagem" 
     href="/menneskene/oscar-hagem"
+    rounded={false}
   />
   <Card
     title="Peter Hysing (1804-1892)"
@@ -264,6 +299,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-bs-q-00182_xl-peter-hysing.jpg" 
     imageAlt="Portrett av Peter Hysing" 
     href="/menneskene/peter-hysing"
+    rounded={false}
   />
   <Card
     title="Peter Stuwitz (1806-1842)"
@@ -271,6 +307,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-bgm-bok-1900-peter-stuwitz.jpg" 
     imageAlt="Portrett av Peter Stuwitz" 
     href="/tema/fisk/peter-stuwitz"
+    rounded={false}
   />
   <Card
     title="Rolf Nordhagen (1894-1979)"
@@ -278,6 +315,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-bs-q-00376_xl-rolf-nordhagen.jpg" 
     imageAlt="Portrett av Rolf Nordhagen" 
     href="/menneskene/rolf-nordhagen"
+    rounded={false}
   />
   <Card
     title="Thomas Christian Thomassen (1849-1897)"
@@ -285,6 +323,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-ms-2093-T-001-022-thomas-christian-thomassen.jpg" 
     imageAlt="Portrett av Thomas Christian Thomassen" 
     href="https://snl.no/Thomas_Christian_Thomassen"
+    rounded={false}
   />
   <Card
     title="Torbjørn Gaarder (1885-1970)"
@@ -292,6 +331,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-bs-fol-01263-019-b_xl-torbjoern-gaarder.jpg" 
     imageAlt="Portrett av Torbjørn Gaarder" 
     href="/menneskene/torbjoern-gaarder"
+    rounded={false}
   />
   <Card
     title="Torleiv Hannaas (1874-1929)"
@@ -299,6 +339,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-xxvi-005-036_xl-torleiv-hannaas.jpg" 
     imageAlt="Portrett av Torleiv Hannaas" 
     href="/menneskene/torleiv-hannaas"
+    rounded={false}
   />
   <Card
     title="Vilhelm Bjerknes (1862-1951)"
@@ -306,6 +347,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-bs-q-00364_xl-vilhelm-bjerknes.jpg" 
     imageAlt="Portrett av Vilhelm Bjerknes" 
     href="/menneskene/vilhelm-bjerknes"
+    rounded={false}
   />
   <Card
     title="Aagaat Daae (1864-1946)"
@@ -313,6 +355,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/ubb-bgm-bok-1900-aagaat-daae.jpg" 
     imageAlt="Portrett av Aagaat Daae" 
     href="/menneskene/aagaat-daae"
+    rounded={false}
   />
 </Cards>
 
