--- a/content/index.mdx
+++ b/content/index.mdx
@@ -18,7 +18,7 @@ import { Button } from '@/components/ui/button'
 <NavCards title="Tematiske fortellinger" />
 
 <div className="feature text-xl text-center py-20 md:py-42">
-  <h2 className="text-xl text-center">— Menneskene —</h2>
+  <h2 className="text-xl md:text-2xl text-center">— Menneskene —</h2>
 
   Menneskene som på ulike vis har formet museets historie
 
