Update heading style in index.mdx to improve responsiveness on larger screens.

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -10,7 +10,7 @@ import { Button } from '@/components/ui/button'
 <ContentGrid>
 
 <div className="text-xl text-center py-20 md:py-42">
-  <h2 className="text-xl text-center">— En digital jubileumsutstilling —</h2>
+  <h2 className="text-xl md:text-2xl text-center">— En digital jubileumsutstilling —</h2>
 
   Denne nettutstillingen feirer 200 år med forskning, bevaring og formidling av kulturarv ved Universitetsmuseet i Bergen. Gjennom digitale IIIF-manifester kan du utforske våre samlinger og lære mer om museets historie og betydning.
 </div>
