--- a/content/menneskene/wfk-christie.mdx
+++ b/content/menneskene/wfk-christie.mdx
@@ -12,7 +12,7 @@ import {Cards, Card} from '@/components/card'
 
 # Wilhelm Frimann Koren Christie (1778-1849)
 
-<Cards id="historier" title="Historier om Verden i Bergen" className="full pt-10 md:pt-20">
+<Cards id="historier" title="Historier om Christie" className="full pt-10 md:pt-20">
   <Card 
     title="Den reisande Christie" 
     description="I denne nettutstillingen kan du lære mer om Christie og hans reiser. (Illustrasjon: Christie sin dagbok fra 1823. Ms227a, Universitetsbiblioteket i Bergen)" 
