legg-til-foto-lenker-mennesker

--- a/content/menneskene/index.mdx
+++ b/content/menneskene/index.mdx
@@ -32,7 +32,7 @@ import {Cards, Card} from '@/components/card'
    <Card 
     title="August Konow (1780-1873)"
     description="Foretningsmann, politiker og sentral i opprettelsen av Bergens Museum" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    image="/images/menneskene/August_Konow.jpg" 
     imageAlt="Portrett av August Konow" 
     href="https://nbl.snl.no/August_Konow"
     rounded={false}
@@ -54,11 +54,11 @@ import {Cards, Card} from '@/components/card'
     rounded={false}
   />
   <Card 
-    title="Magdalene Abel (1869-)"
+    title="Magdalene Abel (1869-1944)"
     description="Multitallent, tegner og sektær ved museet" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    image="/images/menneskene/Magdalene_Abel1.jpg" 
     imageAlt="Portrett av Magdalene Abel" 
-    href="/"
+    href="Svart hvitt foto av kvinne i kjole, sittende i et arkeologisk utgravningsfelt"
     rounded={false}
   />
   <Card 
@@ -78,19 +78,19 @@ import {Cards, Card} from '@/components/card'
     rounded={false}
   />
   <Card 
-    title="Eva Fett"
+    title="Eva Fett (1910-2003)"
     description="Norges første kvinnlige arkeolog" 
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="Portrett av Eva Fett" 
-    href="https://marcus.uib.no"
+    href="https://tohundrefortellinger.w.uib.no/1936/09/18/1936-eva-nissen-meyer-og-per-fett/"
     rounded={false}
   />
   <Card 
-    title="Per Fett"
+    title="Per Fett (1909-1996)"
     description="Arkeolog" 
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="Portrett av Per Fett" 
-    href="https://marcus.uib.no"
+    href="https://tohundrefortellinger.w.uib.no/1936/09/18/1936-eva-nissen-meyer-og-per-fett/"
     rounded={false}
   />
   <Card
