samlingene og tilvekst lenke forside

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -31,6 +31,12 @@ import { Button } from '@/components/ui/button'
 
 <Carousel title="Samlingenes plass" className="full">
   <Carousel.Item 
+    title="Samlingene og tilvekst" 
+    href="/samlingene-og-tilvekst" 
+    image="/images/en-institusjon-blir-til.jpg" 
+    imageAlt="En institusjon blir til" 
+  />
+  <Carousel.Item 
     title="Museets første protokoll" 
     href="https://tohundrefortellinger.w.uib.no/1825/09/26/1825-museets-forste-protokoll/" 
     image="/images/en-institusjon-blir-til/Bf_Bergen_Museum_Forhandlingsprotokoll_1825-1827_002.jpg" 
