legg-til-foto-person

--- a/content/menneskene/index.mdx
+++ b/content/menneskene/index.mdx
@@ -80,15 +80,15 @@ import {Cards, Card} from '@/components/card'
   <Card 
     title="Eva Fett (1910-2003)"
     description="Norges første kvinnlige arkeolog" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Portrett av Eva Fett" 
+    image="/images/menneskene/Eva Fett_red.jpg" 
+    imageAlt="Portrett av Eva Fett. Hun står i en gravhaug, med masse barn og voksne rundt seg" 
     href="https://tohundrefortellinger.w.uib.no/1936/09/18/1936-eva-nissen-meyer-og-per-fett/"
     rounded={false}
   />
   <Card 
     title="Per Fett (1909-1996)"
     description="Arkeolog" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    image="/images/menneskene/Per_fett.jpg" 
     imageAlt="Portrett av Per Fett" 
     href="https://tohundrefortellinger.w.uib.no/1936/09/18/1936-eva-nissen-meyer-og-per-fett/"
     rounded={false}
