--- a/content/menneskene/index.mdx
+++ b/content/menneskene/index.mdx
@@ -80,7 +80,7 @@ import {Cards, Card} from '@/components/card'
   <Card 
     title="Eva Fett (1910-2003)"
     description="Norges første kvinnlige arkeolog" 
-    image="/images/menneskene/Eva Fett_red.jpg" 
+    image="/images/menneskene/Eva_Fett_red.jpg" 
     imageAlt="Portrett av Eva Fett. Hun står i en gravhaug, med masse barn og voksne rundt seg" 
     href="https://tohundrefortellinger.w.uib.no/1936/09/18/1936-eva-nissen-meyer-og-per-fett/"
     rounded={false}
