Fix animation naming convention in HeroAnimation component for 'verden-i-bergen'

--- a/content/tema/verden-i-bergen/index.mdx
+++ b/content/tema/verden-i-bergen/index.mdx
@@ -14,7 +14,7 @@ import { Card, Cards } from '@/components/card'
 import { JumpToStories } from '@/components/jump-to-stories'
 
 <Hero variant="verden-i-bergen" className="bg-um-utland-tint/60">
-  <HeroAnimation animation="verden-i-bergen" className="border-um-utland-solid" />
+  <HeroAnimation animation="verden_i_bergen" className="border-um-utland-solid" />
   <HeroContent>
     <HeroTitle>
       Verden i Bergen
