Fix animation naming convention in HeroAnimation component for 'tid-og-rom'

--- a/content/tema/tid-og-rom/index.mdx
+++ b/content/tema/tid-og-rom/index.mdx
@@ -15,7 +15,7 @@ import { Card, Cards } from '@/components/card'
 import { JumpToStories } from '@/components/jump-to-stories'
 
 <Hero variant="tid-og-rom" className="bg-um-tidrom-tint/60">
-  <HeroAnimation animation="tid-og-rom" className="border-um-tidrom-solid" />
+  <HeroAnimation animation="tid_og_rom" className="border-um-tidrom-solid" />
   <HeroContent>
     <HeroTitle>
       Tid og rom
