Add asIndexPage flag and update image format for Olav Espevoll

--- a/content/menneskene/index.mdx
+++ b/content/menneskene/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: Menneskene
+asIndexPage: true
 ---
 
 import {Cards, Card} from '@/components/card'
@@ -280,7 +281,7 @@ import {Cards, Card} from '@/components/card'
   <Card
     title="Olav Espevoll (1887-1977)"
     description="Preparant og fotograf" 
-    image="/images/menneskene/bt-12-05-2024-olav-espevoll.jpg" 
+    image="/images/menneskene/bt-12-05-2024-olav-espevoll.png" 
     imageAlt="Portrett av Olav Espevoll" 
     href="/menneskene/olav-espevoll"
     rounded={false}
