--- a/content/tema/hverdag/index.mdx
+++ b/content/tema/hverdag/index.mdx
@@ -35,8 +35,8 @@ Kanskje vi også skal tenke på hvordan vår hverdag blir dokumentert for fremti
 
 
 <Cards id="historier" title="Historier om hverdag" className="full pt-10 md:pt-20">
-  <Card title="Klesvask»" 
-    description="Alle steder - til alle tider" 
+  <Card title="Klesvask" 
+    description="Alle steder - til alle tider. Utforsk samlingene med emneord-søk." 
     image="/nav-card-images/ubb-bs-ok-18198_th.jpg" 
     imageAlt="Klesvask" 
     href="https://marcus.uib.no/search/?q=klesvask&filter=type.exact%23Fotografi&filter=subject.exact%23Klesvask&size=20" 
