fikset feil i stein fisk vekster

--- a/content/tema/stein/astrid-monsen-en-kvinnelig-pioner-ved-bergens-museum.mdx
+++ b/content/tema/stein/astrid-monsen-en-kvinnelig-pioner-ved-bergens-museum.mdx
@@ -74,4 +74,6 @@ Etter 30 år på museet fikk hun innvilget pensjon 31. desember 1948. I et påfa
   </Figure.Content>
 </Figure>
 
+
+*Teksten har tidligere vært publisert i På Høyden, 7.3.2025.*
 </ContentGrid>
