--- a/content/tema/stein/geologi-og-folkeliv-i-hardanger.mdx
+++ b/content/tema/stein/geologi-og-folkeliv-i-hardanger.mdx
@@ -130,6 +130,6 @@ Den mest unike naturopplevelsen fikk Thomassen under et strabasiøst forsøk på
   </Figure.Content>
 </Figure>
 
-*Korte avsnitt i denne teksten har vært tidligere publisert i «Felthistorier» av Marianne Paasche og Ola Søndenå; Universitetsmuseets årbok 2018.*
+*Teksten har tidligere vært publisert i På Høyden, 3.4.2020; og korte avsnitt av teksten har vært tidligere publisert i «Felthistorier» av Marianne Paasche og Ola Søndenå; Universitetsmuseets årbok 2018.*
 
 </ContentGrid>
