--- a/content/tema/vekster/knut-faegri.mdx
+++ b/content/tema/vekster/knut-faegri.mdx
@@ -80,4 +80,6 @@ Vil du lese mer om Knut Fægri? Gå til:
   </Figure.Content>
 </Figure>
 
+
+*Teksten har tidligere vært publisert i Universitetsmuseets årbok 2018, «Felthistorier» av Marianne Paasche og Ola Søndenå.*
 </ContentGrid>
