--- a/content/tema/fisk/christie-og-de-maerkelige-fiske.mdx
+++ b/content/tema/fisk/christie-og-de-maerkelige-fiske.mdx
@@ -35,4 +35,11 @@ Blant de mange originaltegningene av fisk i Christies arkiv finnes det tegninger
 ## «Gåtefulle fisk»
 Fascinasjonen for «mærkelige» fisk og ikke minst for det som skjuler seg i dyphavene, både uer og mer obskure arter, er høyst levende også i dag. I den ærverdige Hvalsalen på Naturhistorisk museum finnes det en monterutstilling om «Gåtefulle fisk», en tittel Christie hadde nikket gjenkjennende til og som synliggjør de lange linjene i forskningen ved museet.
 
+<Figure image="/images/fisk/um-Gaatefulle-fisker.jpg" alt="Monter med fisk" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Monter med «Gåtefulle fisk», Universitetsmuseet i Bergen. Fotograf: Ola Søndenå. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 </ContentGrid>
