Update IIIF content URLs in multiple MDX files to use the correct object paths

--- a/content/tema/dyr/james-grieg.mdx
+++ b/content/tema/dyr/james-grieg.mdx
@@ -26,7 +26,7 @@ Før Griegs død i 1936, testamenterte han skjelettet sitt til Bergens Museum, s
 
 Historien om skjelettet til James er nok en sannhet med solide modifikasjoner. Riktignok testamenterte han det til museet, men om det noensinne ble utstilt i monter ved museet er en svært omdiskutert sak, og ingen vet med sikkerhet i dag om skjelettet faktisk befinner seg ved museet. Uansett, mytene florerer,  det har gjennom årene blitt publisert atskillige artikler om Grieg som «spøkelse», og han har med de egenskapene til og med blitt brukt som gjennomgangsfigur i en av UBs informasjonsfilmer. Høydepunktet, eller kanskje lavmålet, kom da ukebladet Se og Hør for noen år siden sendte et bergensk «medium» ut på kveldsvandring i Naturhistorisk museum, for å endelig «gi ham fred». Ikke rart at James flyktet over til Spesialsamlingens gemakker.
 
-<Work className="feature" iiifContent="https://api.ub.uib.no/items/ubb-bs-q-00072?as=iiif">
+<Work className="feature" iiifContent="https://api.ub.uib.no/object/ubb-bs-q-00072?as=iiif">
   <Work.Content>
     <Work.Description>
        James Grieg i laboratoriet på Bergens Museum. Fotograf: Johan von der Fehr. Universitetsbiblioteket i Bergen.
