--- a/content/tema/stein/astrid-monsen-en-kvinnelig-pioner-ved-bergens-museum.mdx
+++ b/content/tema/stein/astrid-monsen-en-kvinnelig-pioner-ved-bergens-museum.mdx
@@ -42,7 +42,7 @@ Karrieremessig var nok Kolderups avgjørelse svært problematisk for graptolitt-
 
 I over 25 år utforsket Astrid Monsen Vestlandets kvartærgeologi, i hovedsak i Hordaland, men også i deler av Sogn og Fjordane. Hun oppsøkte moreneavleiringer i et utall sandtak, gravde grøfter og laget snitt som hun målte, dokumenterte og fotograferte. De over 700 bevarte fotografiene vitner om det anstrengende feltarbeidet, og de mange nærbildene av snitt med spade og tommestokk vitner om en nøyaktig og grundig feltmetodikk. Selv om deler av fotosamlingen er av ujevn teknisk kvalitet, er den likevel en uvurderlig forsknings- og dokumentasjonssamling.
 
-<Work className="feature" iiifContent="https://api.ub.uib.no/items/ubb-jr-089-002?as=iiif">
+<Work className="feature" iiifContent="https://api.ub.uib.no/object/ubb-jr-089-002?as=iiif">
   <Work.Content>
     <Work.Description>
       Astrid Monsen med assistenter på feltarbeid i Romarheim, 1930. Fotografering av sedimenter. Fotograf: John B. Rekstad. Universitetsbiblioteket i Bergen.
