--- a/content/tema/vekster/reinrose-vekster.mdx
+++ b/content/tema/vekster/reinrose-vekster.mdx
@@ -9,24 +9,45 @@ keywords:
 <ContentGrid>
 # Reinrose og andre vekster
 
-![Danielssens feltbok](/images/vekster/ubb-ms-0616.jpg)
-*D.C. Danielssens feltbok fra Nordhavsekspedisjonen 1876-1878, med en godt gjemt reinrose inne i omslaget. Universitetsbiblioteket i Bergen.*
+<Figure image="/images/vekster/ubb-ms-0616.jpg" alt="Danielssens feltbok" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      D.C. Danielssens feltbok fra Nordhavsekspedisjonen 1876-1878, med en godt gjemt reinrose inne i omslaget. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
+
+<Figure image="/images/vekster/ubb-ms-0616-01.jpg" alt="Tørket reinrose" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      D.C. Danielssens reinrose, plukket på Svalbard i august 1878. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
+
+<Figure image="/images/vekster/ubb-bgm-musehagen-01.jpg" alt="Foto av museumshagen" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Muséhagen, ca. 1902. Fotograf ukjent. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
+
+<Figure image="/images/vekster/ubb-ms-2196-a-13-005.jpg" alt="Lysbilde med blomster" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Lysbilde fra Muséhagen, trolig 1930-årene. Fotograf: Knut Fægri. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 
-![Tørket reinrose](/images/vekster/ubb-ms-0616-01.jpg)
-*D.C. Danielssens reinrose, plukket på Svalbard i august 1878. Universitetsbiblioteket i Bergen.*
-
-
-![Foto av museumshagen](/images/vekster/ubb-bgm-musehagen-01.jpg)
-*Muséhagen, ca. 1902. Fotograf ukjent. Universitetsbiblioteket i Bergen.*
-
-
-![Lysbilde med blomster](/images/vekster/ubb-ms-2196-a-13-005.jpg)
-*Lysbilde fra Muséhagen, trolig 1930-årene. Fotograf: Knut Fægri. Universitetsbiblioteket i Bergen.*
-
-
-![Akvarell av reinrose](/images/vekster/um_Bf_By_12027_01.jpg)
-*Reinrose tegnet av Miranda Bødtker. Universitetsmuseet i Bergen.*
-
+<Figure image="/images/vekster/um_Bf_By_12027_01.jpg" alt="Akvarell av reinrose" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Reinrose tegnet av Miranda Bødtker. Universitetsmuseet i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 </ContentGrid>
